== 0.4.1 2012-04-15

* Rails 3.1 and 3.2 compatibility
* Added the method all_scopes that return all the scopes in a model

== 0.4.0 2011-05-23

* Fixed problem with #model_name on proxy class (dynamic_form plugin)
* Fixed problem with scoped errors being lost by error_messages_for (dynamic_form plugin)
* Fixed Rails3 deprecation warnings

== 0.3.1 2011-02-24

* Added Rails3 compatibility

== 0.3.0 2009-01-04

* Fixed problem with DelegateClass not picking up method definitions that come after the validation_scope block.

== 0.2.0 2009-01-04

* Added basic unit tests using in-memory sqlite3

== 0.1.0 2009-01-03

* Initial release.  Only tested within an app.  Probably has lots of bugs.  Test suite forthcoming.