@@ -20,37 +20,34 @@ module ValidationScopes
         end
       end
       self.all_scopes = scope
-      deferred_proxy_class_declaration = Proc.new do
-        proxy_class = Class.new(DelegateClass(base_class)) do
-          include ActiveModel::Validations
 
-          def initialize(record)
-            @base_record = record
-            super(record)
-          end
+      proxy_class = Class.new(DelegateClass(base_class)) do
+        include ActiveModel::Validations
 
-          # Hack since DelegateClass doesn't seem to be making AR::Base class methods available.
-          define_method("errors") do
-            @errors ||= ActiveModel::Errors.new(@base_record)
-          end
-
-          # Hacks to support dynamic_model helpers
-          def to_model
-            self
-          end
-
-          # Rails 3 default implementation of model_name blows up for anonymous classes
-          class << self; self; end.class_eval do
-            define_method(:model_name) do
-              base_class.model_name
-            end
-          end
+        def initialize(record)
+          @base_record = record
+          super(record)
         end
 
-        yield proxy_class
+        # Hack since DelegateClass doesn't seem to be making AR::Base class methods available.
+        define_method("errors") do
+          @errors ||= ActiveModel::Errors.new(@base_record)
+        end
 
-        proxy_class
+        # Hacks to support dynamic_model helpers
+        def to_model
+          self
+        end
+
+        # Rails 3 default implementation of model_name blows up for anonymous classes
+        class << self; self; end.class_eval do
+          define_method(:model_name) do
+            base_class.model_name
+          end
+        end
       end
+
+      yield proxy_class
 
       define_method(scope) do
         send("validation_scope_proxy_for_#{scope}").errors
@@ -66,8 +63,7 @@ module ValidationScopes
 
       define_method("init_validation_scope_for_#{scope}") do
         unless instance_variable_defined?("@#{scope}")
-          klass = deferred_proxy_class_declaration.call
-          instance_variable_set("@#{scope}", klass.new(self))
+          instance_variable_set("@#{scope}", proxy_class.new(self))
         end
       end
 
