@@ -1,3 +1,7 @@
+== Unreleased
+
+* Fix for memory leak described at http://siliconsenthil.in/blog/2013/01/19/validation-scopes-leaks-memory/
+
 == 0.4.1 2012-04-15
 
 * Rails 3.1 and 3.2 compatibility
